--- a/web.config
+++ b/web.config
@@ -9,7 +9,28 @@
 	</connectionStrings>
 	<system.web>
 		<compilation debug="true" strict="false" explicit="true" targetFramework="4.0">
+			<assemblies>
+				<add assembly="System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+				<add assembly="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+				<add assembly="System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+				<add assembly="System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+				<add assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+				<add assembly="Microsoft.VisualBasic, Version=10.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+			</assemblies>
+			<codeSubDirectories>
+				<add directoryName="Models" />
+				<add directoryName="Controllers" />
+			</codeSubDirectories>
 		</compilation>
+		<pages>
+			<namespaces>
+				<add namespace="System"/>
+				<add namespace="System.Collections.Generic"/>
+				<add namespace="System.Data"/>
+				<add namespace="System.Linq"/>
+				<add namespace="System.Web.UI"/>
+			</namespaces>
+		</pages>
 	</system.web>
 </configuration>
 <!--  -->
